gateway-envoy/config/envoy.yaml
static_resources:
  listeners:
    - address:
        socket_address:
          address: 0.0.0.0
          port_value: 8099
      filter_chains:
        - filters:
            - name: envoy.http_connection_manager
              config:
                stat_prefix: ingress_http
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: api-gateway
                      domains:
                        - "*"
                      routes:
                        - match:
                            prefix: "/users/"
                          route:
                            cluster: user-service
                            prefix_rewrite: "/users/"
                        - match:
                            prefix: "/users"
                          route:
                            cluster: user-service
                            prefix_rewrite: "/users/"     
                        - match:
                            prefix: "/kyc/"
                          route:
                            cluster: kyc-service
                            prefix_rewrite: "/kyc/"
                        - match:
                            prefix: "/kyc"
                          route:
                            cluster: kyc-service
                            prefix_rewrite: "/kyc/"  
                        - match:
                            prefix: "/admin/"
                          route:
                            cluster: admin-service
                            prefix_rewrite: "/admin/"
                        - match:
                            prefix: "/admin"
                          route:
                            cluster: admin-service
                            prefix_rewrite: "/admin/" 
                        - match:
                            prefix: "/notifications/"
                          route:
                            cluster: notification-service
                            prefix_rewrite: "/notifications/"
                        - match:
                            prefix: "/notifications"
                          route:
                            cluster: notification-service
                            prefix_rewrite: "/notifications/" 
                        # - match:
                        #     prefix: "/swap"
                        #   route:
                        #     cluster: swap-service
                        #     prefix_rewrite: "/swap/" 
                        - match:
                            prefix: "/swap/"
                          route:
                            cluster: swap-service
                            prefix_rewrite: "/swap/" 
                        - match:
                            prefix: "/activity/"
                          route:
                            cluster: activity-service
                            prefix_rewrite: "/activity/" 
                        - match:
                            prefix: "/activity"
                          route:
                            cluster: activity-service
                            prefix_rewrite: "/activity/" 
                        # - match:
                        #     prefix: "/overwallet"
                        #   route:
                        #     cluster: over-service
                        #     prefix_rewrite: "/overwallet/" 
                        - match:
                            prefix: "/overwallet/"
                          route:
                            cluster: over-service
                            prefix_rewrite: "/overwallet/" 
                        - match:
                            prefix: "/gateway/wallet/"
                          route:
                            cluster: gateway-service
                            prefix_rewrite: "/gateway/wallet/" 
                        - match:
                            prefix: "/wallet/eth/"
                          route:
                            cluster: eth-service
                            prefix_rewrite: "/wallet/eth/" 
                        - match:
                            prefix: "/wallet/matic/"
                          route:
                            cluster: matic-service
                            prefix_rewrite: "/wallet/matic/" 
                        - match:
                            prefix: "/wallet/bnb/"
                          route:
                            cluster: bnb-service
                            prefix_rewrite: "/wallet/bnb/" 
                        - match:
                            prefix: "/wallet/btc/"
                          route:
                            cluster: btc-service
                            prefix_rewrite: "/wallet/btc/" 
                        # - match:
                        #     prefix: "/wallettron/"
                        #   route:
                        #     cluster: tron-service
                        #     prefix_rewrite: "/wallettron/" 
                        - match:
                            prefix: "/"
                          direct_response:    
                            status: 200
                            body:
                              inline_string: "success"   
                http_filters:
                  - name: envoy.router
                    typed_config: {}
  clusters:
    - name: user-service
      connect_timeout: 0.25s
      type: strict_dns
      lb_policy: round_robin
      hosts:
        - socket_address:
            address: stage-user.fcbank-ns
            port_value: 3000
    - name: kyc-service
      connect_timeout: 0.25s
      type: strict_dns
      lb_policy: round_robin
      hosts:
        - socket_address:
            address: stage-kyc.fcbank-ns
            port_value: 3005
    - name: admin-service
      connect_timeout: 0.25s
      type: strict_dns
      lb_policy: round_robin
      hosts:
        - socket_address:
            address: stage-admin.fcbank-ns
            port_value: 3008
    - name: notification-service
      connect_timeout: 0.25s
      type: strict_dns
      lb_policy: round_robin
      hosts:
        - socket_address:
            address: stage-notification.fcbank-ns
            port_value: 3006
    - name: swap-service
      connect_timeout: 0.25s
      type: strict_dns
      lb_policy: round_robin
      hosts:
        - socket_address:
            address: stage-swap.fcbank-ns
            port_value: 3007
    - name: activity-service
      connect_timeout: 0.25s
      type: strict_dns
      lb_policy: round_robin
      hosts:
        - socket_address:
            address: stage-activity.fcbank-ns
            port_value: 3009
    - name: over-service
      connect_timeout: 0.25s
      type: strict_dns
      lb_policy: round_robin
      hosts:
        - socket_address:
            address: stage-over.fcbank-ns
            port_value: 3010
    - name: gateway-service
      connect_timeout: 0.25s
      type: strict_dns
      lb_policy: round_robin
      hosts:
        - socket_address:
            address: stage-gateway.fcbank-ns
            port_value: 3016
    - name: eth-service
      connect_timeout: 0.25s
      type: strict_dns
      lb_policy: round_robin
      hosts:
        - socket_address:
            address: stage-eth.fcbank-ns
            port_value: 3011
    - name: matic-service
      connect_timeout: 0.25s
      type: strict_dns
      lb_policy: round_robin
      hosts:
        - socket_address:
            address: stage-matic.fcbank-ns
            port_value: 3014
    - name: bnb-service
      connect_timeout: 0.25s
      type: strict_dns
      lb_policy: round_robin
      hosts:
        - socket_address:
            address: stage-bnb.fcbank-ns
            port_value: 3013
    - name: btc-service
      connect_timeout: 0.25s
      type: strict_dns
      lb_policy: round_robin
      hosts:
        - socket_address:
            address: stage-bnb.fcbank-ns
            port_value: 3013
admin:
  access_log_path: "/dev/null"
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 9099
